--- a/Invictus.Pub/packages.config
+++ b/Invictus.Pub/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cryptolens.Licensing" version="4.0.27" targetFramework="net461" />
   <package id="DeviceId" version="5.1.1" targetFramework="net461" />
   <package id="FSharp.Core" version="4.7.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
   <package id="SharpDX" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Desktop" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
 </packages>
