Added Orbwalker Menu, Fixed TargetSelector Menu, BoundingRadius is a static Value for now (65.0f, ADD A FUNCTION TO READ BOUNDINGRADIUS!)
TODO:
- Add More TS Features
- Fix Bounding Radius

--- a/Invictus.Pub/Invictus.Core.csproj
+++ b/Invictus.Pub/Invictus.Core.csproj
@@ -210,7 +210,7 @@
     <Compile Include="Invictus\Framework\Menu\CoreSettingView.Designer.cs">
       <DependentUpon>CoreSettingView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Invictus\Framework\Menu\Globals.cs" />
+    <Compile Include="Invictus\Framework\Globals.cs" />
     <Compile Include="Invictus\Framework\Menu\IngameMenu.cs" />
     <Compile Include="Invictus\Framework\Menu\MenuBox.cs">
       <SubType>Form</SubType>
