--- a/Invictus.Pub/Invictus.Core.csproj
+++ b/Invictus.Pub/Invictus.Core.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Invictus\Structures\GameObjects\GameObject.cs" />
     <Compile Include="Invictus\Framework\Utils.cs" />
     <Compile Include="Invictus\Structures\GameObjects\ObjectTypeFlag.cs" />
+    <Compile Include="Invictus\Structures\Spell Structure\SpellBook.cs" />
     <Compile Include="Invictus\ThreadService\ThreadService.cs" />
     <Compile Include="Invictus\Framework\NativeImport.cs" />
     <Compile Include="Invictus\Framework\ProcessManager.cs" />
