--- a/Invictus.Pub/Invictus.Core.csproj
+++ b/Invictus.Pub/Invictus.Core.csproj
@@ -247,8 +247,8 @@
     <Compile Include="Invictus\Hacks\MainThread.cs" />
     <Compile Include="Invictus\Hacks\Orbwalker\GameObjectOrder.cs" />
     <Compile Include="Invictus\Hacks\Orbwalker\Orbwalker.cs" />
-    <Compile Include="Invictus\Hacks\TargetSelector\HeroSelector.cs" />
-    <Compile Include="Invictus\Hacks\TargetSelector\MinionSelector.cs" />
+    <Compile Include="Invictus\Hacks\TargetSelector\HeroManager.cs" />
+    <Compile Include="Invictus\Hacks\TargetSelector\MinionManager.cs" />
     <Compile Include="Invictus\Hacks\TargetSelector\ObjectManager.cs" />
     <Compile Include="Invictus\LogService\DebugConsole.cs" />
     <Compile Include="Invictus\Framework\UpdateService\Offsets.cs" />
@@ -316,4 +316,11 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Confuser.MSBuild.1.4.1\build\Confuser.MSBuild.targets" Condition="Exists('..\packages\Confuser.MSBuild.1.4.1\build\Confuser.MSBuild.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Dieses Projekt verweist auf mindestens ein NuGet-Paket, das auf diesem Computer fehlt. Verwenden Sie die Wiederherstellung von NuGet-Paketen, um die fehlenden Dateien herunterzuladen. Weitere Informationen finden Sie unter "http://go.microsoft.com/fwlink/?LinkID=322105". Die fehlende Datei ist "{0}".</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Confuser.MSBuild.1.4.1\build\Confuser.MSBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Confuser.MSBuild.1.4.1\build\Confuser.MSBuild.targets'))" />
+  </Target>
 </Project>
