--- a/Invictus.Pub/packages.config
+++ b/Invictus.Pub/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Confuser.MSBuild" version="1.4.1" targetFramework="net461" developmentDependency="true" />
   <package id="Cryptolens.Licensing" version="4.0.27" targetFramework="net461" />
   <package id="DeviceId" version="5.1.1" targetFramework="net461" />
   <package id="FSharp.Core" version="4.7.2" targetFramework="net461" />
