Updated Security And IChampionModule Interface
- Detecting a Debugger either causes a crash or a BSOD after a random time delay

--- a/Invictus.Pub/InvictusSharp.csproj
+++ b/Invictus.Pub/InvictusSharp.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Invictus\LogService\DebugConsole.cs" />
     <Compile Include="Invictus\Framework\UpdateService\Offsets.cs" />
     <Compile Include="Invictus\LogService\Logger.cs" />
+    <Compile Include="Invictus\Modules\Champion Modules\LocalChampionInfo.cs" />
     <Compile Include="Invictus\Modules\Champion Modules\GetChampionModule.cs" />
     <Compile Include="Invictus\Modules\Champion Modules\IChampionModule.cs" />
     <Compile Include="Invictus\Modules\Champion Modules\Vayne\AntiGapCloser.cs" />
