--- a/Invictus.Pub/app.config
+++ b/Invictus.Pub/app.config
@@ -31,7 +31,7 @@
             <setting name="DrawSpellCD" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="DrawFOWExploit" serializeAs="String">
+            <setting name="DrawRecallTracker" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="TargetSelector_Mode" serializeAs="String">
