--- a/Invictus.Pub/app.config
+++ b/Invictus.Pub/app.config
@@ -2,10 +2,46 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="InvictusSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Invictus.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <InvictusSharp.Properties.Settings>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SplashScreen" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UserIcon" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LicenseKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="RememberMe" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DrawAttackRange" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DrawSpellCD" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DrawRecallTracker" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="TargetSelector_Mode" serializeAs="String">
+                <value>LowestHPTarget</value>
+            </setting>
+            <setting name="Orbwalker_lasthitDelay" serializeAs="String">
+                <value>50</value>
+            </setting>
+        </InvictusSharp.Properties.Settings>
         <Invictus.Core.Properties.Settings>
             <setting name="Username" serializeAs="String">
                 <value />
@@ -37,7 +73,7 @@
             <setting name="TargetSelector_Mode" serializeAs="String">
                 <value>LowestHPTarget</value>
             </setting>
-            <setting name="Orbwalker_ExtraWindup" serializeAs="String">
+            <setting name="Orbwalker_lasthitDelay" serializeAs="String">
                 <value>90</value>
             </setting>
         </Invictus.Core.Properties.Settings>
