--- a/Invictus.Pub/Properties/Settings.settings
+++ b/Invictus.Pub/Properties/Settings.settings
@@ -27,7 +27,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="DrawRecallTracker" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="TargetSelector_Mode" Type="System.String" Scope="User">
       <Value Profile="(Default)">LowestHPTarget</Value>
@@ -36,10 +36,13 @@
       <Value Profile="(Default)">50</Value>
     </Setting>
     <Setting Name="DrawZoomHack" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ToggleAutoSmite" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ToggleAutoIgnite" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
