--- a/Invictus.Pub/app.config
+++ b/Invictus.Pub/app.config
@@ -1,27 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="InvictusSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="Invictus.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="InvictusSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="Invictus.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
         <InvictusSharp.Properties.Settings>
             <setting name="Username" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SplashScreen" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="UserIcon" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LicenseKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RememberMe" serializeAs="String">
                 <value>False</value>
@@ -33,7 +33,7 @@
                 <value>True</value>
             </setting>
             <setting name="DrawRecallTracker" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="TargetSelector_Mode" serializeAs="String">
                 <value>LowestHPTarget</value>
@@ -42,27 +42,30 @@
                 <value>50</value>
             </setting>
             <setting name="DrawZoomHack" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ToggleAutoSmite" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
+            </setting>
+            <setting name="ToggleAutoIgnite" serializeAs="String">
+                <value>True</value>
             </setting>
         </InvictusSharp.Properties.Settings>
         <Invictus.Core.Properties.Settings>
             <setting name="Username" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SplashScreen" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="UserIcon" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LicenseKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RememberMe" serializeAs="String">
                 <value>False</value>
@@ -87,9 +90,9 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
