--- a/Invictus.Pub/packages.config
+++ b/Invictus.Pub/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Confuser.MSBuild" version="1.4.1" targetFramework="net461" developmentDependency="true" />
-  <package id="Cryptolens.Licensing" version="4.0.29" targetFramework="net461" />
+  <package id="Cryptolens.Licensing" version="4.0.30" targetFramework="net45" requireReinstallation="true" />
   <package id="DeviceId" version="5.2.0" targetFramework="net461" />
+  <package id="EZInput" version="1.3.2" targetFramework="net461" />
   <package id="FSharp.Core" version="5.0.0" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="log4net" version="2.0.12" targetFramework="net461" />
@@ -11,7 +12,7 @@
   <package id="Microsoft.Win32.SystemEvents" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Windows.Compatibility" version="5.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="ReaLTaiizor" version="3.7.8.1" targetFramework="net461" />
+  <package id="ReaLTaiizor" version="3.7.8.1" targetFramework="net461" requireReinstallation="true" />
   <package id="SharpDX" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Desktop" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net461" />
@@ -43,8 +44,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Pkcs" version="5.0.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.ProtectedData" version="5.0.0" targetFramework="net461" />
